--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@react-pdf/renderer": "^3.1.13",
     "font-awesome-icons": "^1.6.0",
     "framer-motion": "^10.16.4",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "lottie-react": "^2.4.0",
     "next": "13.5.4",
     "react": "^18",
+    "react-date-picker": "^10.5.2",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18",
+    "react-quill": "^2.0.0",
     "react-to-pdf": "^1.0.1",
     "tw-elements": "^1.0.0",
     "tw-elements-react": "^1.0.0-alpha1"
